Добавил модальное окно

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,8 @@
 
         <nav class="navigation">
           <ul class="navigation__list">
-            <li class="navigation__item"><a href="./index.html" class="navigation__link navigation__link--accent">Студия</a></li>
-            <li class="navigation__item"><a href="./portfolio.html" class="navigation__link">Портфолио</a></li>
+            <li class="navigation__item"><a href="./index.html" class="navigation__link">Студия</a></li>
+            <li class="navigation__item"><a href="./portfolio.html" class="navigation__link navigation__link--accent">Портфолио</a></li>
             <li class="navigation__item"><a href="./portfolio.html" class="navigation__link">Контакты</a></li>
           </ul>
         </nav>
