--- a/portfolio.html
+++ b/portfolio.html
@@ -12,40 +12,43 @@
 
   <body>
     <!-- Верхняя линия -->
+    <!-- prettier-ignore -->
     <header>
-      <div class="page-header container">
+    <div class="page-header container">
+
         <a href="./portfolio.html" class="logo">
-          <span class="logo__title"> <span class="logo__title--accent">Web</span>Studio </span>
+            <span class="logo__title-black">
+                <span class="logo__title--accent">Web</span>Studio
+            </span>
         </a>
 
         <nav class="navigation">
-          <ul class="navigation__list">
-            <li class="navigation__item"><a href="./index.html" class="navigation__link">Студия</a></li>
-            <li class="navigation__item"><a href="./portfolio.html" class="navigation__link navigation__link--accent">Портфолио</a></li>
-            <li class="navigation__item"><a href="./portfolio.html" class="navigation__link">Контакты</a></li>
-          </ul>
+            <ul class="navigation__list">
+                <li class="navigation__item"><a href="./index.html" class="navigation__link">Студия</a></li>
+                <li class="navigation__item"><a href="./portfolio.html" class="navigation__link navigation__link--accent">Портфолио</a></li>
+                <li class="navigation__item"><a href="./portfolio.html" class="navigation__link">Контакты</a></li>
+            </ul>
         </nav>
 
         <ul class="contact">
-          <li class="contact__item">
-            <a href="mailto:info@devstudio.com" class="contact__link">
-              <svg class="contact__icon" width="16" height="12">
-                <use href="./image/logo/icons.svg#icon-mail"></use>
-              </svg>
-              <span>info@devstudio.com</span>
-            </a>
-          </li>
-          <!-- prettier-ignore -->
-          <li class="contact__item">
-            <a href="tel:+380961111111" class="contact__link">
-              <svg class="contact__icon" width="10" height="16">
-                <use href="./image/logo/icons.svg#icon-mobile"></use>
-              </svg>+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </div>
-    </header>
 
+            <li class="contact__item">
+                <a href="mailto:info@devstudio.com" class="contact__link">
+                    <svg class="contact__icon" width="16" height="12">
+                        <use href="./image/logo/icons.svg#icon-mail"></use>
+                    </svg><span>info@devstudio.com</span></a>
+            </li>
+
+            <li class="contact__item">
+                <a href="tel:+380961111111" class="contact__link">
+                    <svg class="contact__icon" width="10" height="16">
+                        <use href="./image/logo/icons.svg#icon-mobile"></use>
+                    </svg>+38 096 111 11 11</a>
+            </li>
+
+        </ul>
+    </div>
+</header>
     <!-- Main content -->
 
     <main>
@@ -217,7 +220,7 @@
       <div class="container footer__flex">
         <div class="address">
           <a href="./portfolio.html" class="logo">
-            <span class="logo__title"> <span class="logo__title--accent">Web</span>Studio </span>
+            <span class="logo__title-white"> <span class="logo__title--accent">Web</span>Studio </span>
           </a>
 
           <address>
