--- a/index.html
+++ b/index.html
@@ -143,35 +143,43 @@
                 <ul class="feature__list">
 
                     <li class="feature__item">
-                        <svg class="feature__icon" width="70" height="70">
+                        <div class="feature__thumb">
+                            <svg class="feature__icon" width="70" height="70">
                             <use href="./image/logo/icons.svg#icon-antenna"></use>
                         </svg>
+                        </div>
                         <h3 class="feature__title">Внимание к деталям</h3>
                         <p class="feature__text">Идейные соображения, а также начало повседневной работы по формированию позиции.
                         </p>
                     </li>
 
                     <li class="feature__item">
-                        <svg class="feature__icon" width="70" height="70">
+                        <div class="feature__thumb">
+                            <svg class="feature__icon" width="70" height="70">
                             <use href="./image/logo/icons.svg#icon-clock"></use>
                         </svg>
+                        </div>
                         <h3 class="feature__title">Пунктуальность"></h3>
                         <p class="feature__text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                         </p>
                     </li>
 
                     <li class="feature__item">
-                            <svg class="feature__icon" width="70" height="70">
+                           <div class="feature__thumb">
+                             <svg class="feature__icon" width="70" height="70">
                                 <use href="./image/logo/icons.svg#icon-diagram"></use>
                             </svg>
+                           </div>
                         <h3 class="feature__title">Планирование</h3>
                         <p class="feature__text">Равным образом консультация с широким активом в значительной степени обуславливает.
                         </p>
                     </li>
                     <li class="feature__item">
-                            <svg class="feature__icon" width="70" height="70">
+                            <div class="feature__thumb">
+                                <svg class="feature__icon" width="70" height="70">
                                 <use href="./image/logo/icons.svg#icon-astronaut"></use>
                             </svg>
+                            </div>
                         <h3 class="feature__title">Современные технологии</h3>
                         <p class="feature__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
